--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   app:
     container_name: timesheet
     restart: unless-stopped
-    image: jassemtalbi/devopsentreprise
+    image: jassemtalbi/repodevops
     depends_on:
     - mysql
     ports:
